# flaiwheel

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  LICENSE.md  README.md  SECURITY.md  docker-compose.yml  glama.json  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: pages.yml
.skills/skills/flaiwheel/: SKILL.md
docs/: index.html
examples/: cursor-mcp.json
idea/: MCP Docs Vektor – 1. Übersicht & Architektur.md  MCP Docs Vektor – 2. Config & Indexer.md  MCP Docs Vektor – 3. MCP Server & Git Watcher.md  MCP Docs Vektor – 4. Web-UI Backend (FastAPI).md  MCP Docs Vektor – 5. Web Frontend (HTML).md  MCP Docs Vektor – 6. Docker, Entrypoint & Projekt-Config.md
scripts/: entrypoint.sh  flaiwheel-hook.sh  install.sh  reindex.sh
src/flaiwheel/: __init__.py  __main__.py  auth.py  bootstrap.py  code_analyzer.py  config.py  health.py  indexer.py  logutil.py  project.py  quality.py  readers.py  server.py  telemetry.py  watcher.py  web.py
src/flaiwheel/templates/: index.html
tests/: conftest.py  test_bootstrap.py  test_code_analyzer.py  test_health.py  test_indexer.py  test_migration.py  test_project.py  test_quality.py  test_readers.py  test_search_precision.py  test_server.py  test_telemetry.py
